--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,12 @@
 	    </div>
 	  </div>
 	</nav>
-    <div class="container">
+		
+		<% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
+    
+		<div class="container">
     	<%= yield %>
     </div>
   </body>
